--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vietmap/vietmap-api": "^1.1.2",
     "@vietmap/vietmap-gl-react-native": "^2.3.2",
     "axios": "^1.7.2",
+    "date-fns": "^4.1.0",
     "expo": "^54.0.13",
     "expo-constants": "~18.0.9",
     "expo-file-system": "~19.0.17",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/date-fns": "^2.5.3",
     "@types/react": "~19.1.10",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo-dev-client": "^6.0.17",
